[package]
name = "rfplay"
version = "0.1.0"
authors = ["weiwei3.wang <weiwei3.wang@ly.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = {version = "1.4.0"}
futures = {version = "0.3.8"}
async-std = {version = "1.7.0"}